feat: Send Daily Order Summary Email
- Write a Celery task that queries the database for new orders created in the last 24 hours.
- Format the order data into a readable summary (e.g., order ID, customer name, total amount).
- Send the summary via email to the admin using SMTP mail service
- Schedule the task with Celery Beat to run every day at a specific time, such as midnight.

--- a/eCommercePlatform/users/templates/users/user_profile.html
+++ b/eCommercePlatform/users/templates/users/user_profile.html
@@ -53,7 +53,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for order in request.user.order_set.all %}
+            {% for order in request.user.orders.all %}
             <tr>
                 <td>{{ order.id }}</td>
                 <td>{{ order.order_date }}</td>
