feat: Add products by uploading CSV file - Create admin interface to upload CSV file containing products and their details - Improved products search to filter products from description and name both - Fixed search pagination issue in view and reflected the changes in search template - Added additional field `image_url` to Product model - Edit product_detail.html template to show image either from url or from media directory - Added the mobile and accessories category to products listing and search templates - Created form to upload css file and created method to display the form and get the uploaded csv file - Created celery task to process CSV file and update or create products.

--- a/eCommercePlatform/products/templates/products/product_detail.html
+++ b/eCommercePlatform/products/templates/products/product_detail.html
@@ -16,7 +16,11 @@
     {% endif %}
     <div class="row">
         <div class="col-lg-6">
+            {% if product.image_url %}
+            <img class="img-fluid rounded" src="{{ product.image_url }}" alt="{{ product.name }}">
+            {% else %}
             <img class="img-fluid rounded" src="{{ product.image.url }}" alt="{{ product.name }}">
+            {% endif %}
         </div>
         <div class="col-lg-6">
             <h1 class="display-4">{{ product.name }}</h1>
