--- a/eCommercePlatform/products/templates/products/products_listing.html
+++ b/eCommercePlatform/products/templates/products/products_listing.html
@@ -29,6 +29,9 @@ Products Listing
                 <li class="list-group-item {% if selected_category == 'Men Fashion' %}active-category{% endif %}">
                     <a style="color: green;" href="{% url 'products:products-listing' %}?category=Men Fashion">Men’s Fashion</a>
                 </li>
+                <li class="list-group-item {% if selected_category == 'Mobile and Accessories' %}active-category{% endif %}">
+                    <a style="color: green;" href="{% url 'products:products-listing' %}?category=Mobile and Accessories">Mobile and Accessories</a>
+                </li>
             </ul>
         </div>
 
@@ -40,7 +43,11 @@ Products Listing
                         <a href="{% url 'products:detail' product.id %}">
                             <img 
                                 class="card-img-top"
-                                src="{{ product.image.url }}" 
+                                {% if product.image_url %}
+                                    src="{{ product.image_url }}" 
+                                {% else %}
+                                    src="{{ product.image.url }}"
+                                {% endif %}
                                 alt="{{ product.name }}"
                                 style="height: 300px; object-fit: cover;"
                             >
